# hs-tasks

./: .gitignore  Session.vim  config.vite.js  index.html  package.json  scripts.js
axios-rust/: Cargo.toml  LICENSE_MIT
axios-rust/src/: lib.rs  macros.rs  structurs.rs
src/: main.ts  style.css
src/styles/: footer.scss  global.scss  header.scss  main.scss  media.scss  style.scss  style.scss_
